Tela inicial = Login, Link "cadastre-se" funciona

--- a/Complete Code/stock/src/main/resources/templates/cadastro-cliente.html
+++ b/Complete Code/stock/src/main/resources/templates/cadastro-cliente.html
@@ -23,7 +23,7 @@
 
     <main>
       <!-- Início do formulário -->
-      <form method="post" action="/register" class="container-fluid mt-5 mb-5 flex-container">
+      <form method="post" action="/cadastrar" class="container-fluid mt-5 mb-5 flex-container">
         <h2 class="text-center"> Cadastro Cliente </h2>
         <section class="mt-4">
           <!-- Username -->
