--- a/Complete Code/stock/src/main/resources/templates/login.html
+++ b/Complete Code/stock/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
       </div>
       <button type="submit"> Login </button>
       <div class="input-container-h5 mt-3">
-        <h5><span class="negrito"> Não possui uma conta? <a href="cadastro-cliente.html" class="text"> Cadastre-se </a> </span> </h5>
+        <h5><span class="negrito"> Não possui uma conta? <a th:href="@{redirect}" class="text"> Cadastre-se </a> </span> </h5> <!-- th href é o endpoint destino-->
       </div>
     </form>
   </div>
